# requirements-txt

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: conf.py  requirements.txt
docs/api/: requirements_txt.md
docs/resources/: install.md  requirements.md
src/sphinxcontrib/requirements_txt/: __init__.py  directive.py
src/sphinxcontrib/requirements_txt/assets/jinja2/: template.md.j2  template.rst.j2
tests/: test_directive.py
